--- a/AngularBookStore.Server/wwwroot/uploads/index.html
+++ b/AngularBookStore.Server/wwwroot/uploads/index.html
@@ -11,5 +11,5 @@
 </style><link rel="stylesheet" href="styles-2V55EF22.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-2V55EF22.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-NHTYTDZW.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-I53NMIHN.js" type="module"></script></body>
 </html>
